scrollbar issue fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,33 +3,55 @@
 @tailwind utilities;
 
 @layer components {
-    .infotext {
-        @apply p-4 rounded-lg max-w-[275px] bg-[#3E3F4B]
-    }
-    .chatrow {
-        @apply rounded-lg px-4 py-3 text-sm flex items-center justify-center space-x-2 hover:bg-[#2a2b32] cursor-pointer text-gray-300 transition-all duration-200 ease-out
-    }
-    .in {
-        @apply hover:bg-[#202123]
-    } 
+  .infotext {
+    @apply p-4 rounded-lg max-w-[275px] bg-[#3E3F4B]
+  }
+
+  .chatrow {
+    @apply rounded-lg px-4 py-3 text-sm flex items-center justify-center space-x-2 hover:bg-[#2a2b32] cursor-pointer text-gray-300 transition-all duration-200 ease-out
+  }
+
+  .in {
+    @apply hover:bg-[#202123]
+  }
 }
 
-/* For Webkit browsers */
-.chat-scrollbar::-webkit-scrollbar {
-  width: 6px;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .infotext {
+    @apply p-4 rounded-lg max-w-[275px] bg-[#3E3F4B]
+  }
+
+  .chatrow {
+    @apply rounded-lg px-4 py-3 text-sm flex items-center justify-center space-x-2 hover:bg-[#2a2b32] cursor-pointer text-gray-300 transition-all duration-200 ease-out
+  }
+
+  .in {
+    @apply hover:bg-[#202123]
+  }
 }
 
-.chat-scrollbar::-webkit-scrollbar-track {
-  background: #2d2d2d;
+[class*="react-scroll-to-bottom"] {
+  scrollbar-width: thin !important;
+  scrollbar-color: #5c5b5b transparent !important;
 }
 
-.chat-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #d3d1d1;
-  border-radius: 3px;
+[class*="react-scroll-to-bottom"]::-webkit-scrollbar {
+  width: 6px !important;
 }
 
-/* For Firefox */
-.chat-scrollbar {
-  scrollbar-width: thin;
-  scrollbar-color: #e2e2e2 #2d2d2d;
+[class*="react-scroll-to-bottom"]::-webkit-scrollbar-track {
+  background: transparent !important;
+}
+
+[class*="react-scroll-to-bottom"]::-webkit-scrollbar-thumb {
+  background-color: #5c5b5b !important;
+  border-radius: 3px !important;
+}
+
+[class*="react-scroll-to-bottom"]::-webkit-scrollbar-thumb:hover {
+  background-color: #ACACBE !important;
 }
